# centroid

./: .cursorrules  .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  deployment.md  development.md  docker-compose.development.yml  docker-compose.staging.yml  docker-compose.yml  entrypoint.sh  main.py  package-lock.json  package.json  pyproject.toml  start.sh  tailwind.config.js
.github/ISSUE_TEMPLATE/: feedback.md  feedback.yml
.github/workflows/: deploy-docs.yml  deploy-production.yml  docker-compose-ssh.yml  docker-image.yml  docs-deploy.yml  latest-changes.yml  smokeshow.yml  test.yml
app/: layout.tsx  page.tsx
app/search/: page.tsx
app/settings/: page.tsx
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  openapi_backend_spec.json  pyproject.toml  result_api_collection.json
backend/ai/: README.md  langchain.ipynb  pyproject.toml
backend/ai/src/openastra/: __init__.py  utils.py
backend/ai/src/openastra/tools/: code_execution_tool.py  duckduckgo_search_tool.py  html_scraper_tool.py
backend/ai/tests/tools/: test_code_executor.py  test_duckduckgo_search.py  test_html_scraper.py
backend/ai/tools/: code_execution_tool.py  duckduckgo_search_tool.py  html_scraper_tool.py
backend/app/: analytics.py  backend_pre_start.py  crud.py  initial_data.py  main.py  models.py  utils.py  wait_for_db.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0509509655f3_adding_streams_table_and_is_agent_fields.py  063535a43e85_generating_mcp_server_table.py  186ed3142928_init_tables.py  249359a62be2_init_tables.py  25ccaeed5399_init_tables.py  367855f2e890_init_tables.py  423f776e13cc_init_tables.py  5a3c37c5800f_feat_adding_support_for_connection_tool_.py  6415c4591871_feat_adding_support_for_votes_documents_.py  764175ed5214_feat_adding_support_for_mcp_table.py  8919d52caa01_feat_adding_support_for_connection_tool_.py  8d29de499596_init_tables.py  928d638dd9b3_adding_mcp_and_tools.py  9d552e52af12_init_tables.py  a495d80c9791_init_tables.py  b2007c54f1a2_init_tables.py  b4a2557ad96e_init_tables.py  b72a02e6c104_adding_mcp_and_tools.py  bbcd8361fc79_feat_adding_support_for_connection_tool_.py  cd6680ec31ae_init_tables.py  ce7bac6b12f5_feat_adding_support_for_connection_tool_.py  cfab9465707f_init_tables.py  d0b3286c7bc5_fix_adding_mcp_template_and_server_.py  d3f6184613ab_rename_secrets_kind_to_provider.py  e5a288368061_init_tables.py  eebcbbadae27_adding_tables_for_mcp_instances_tool_.py  fdde384bdced_add_is_agent_and_instructions_to_mcp_.py  fdf9597d4d7e_init_tables.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: __init__.py  actions.py  chats.py  connections.py  documents.py  execute.py  files.py  items.py  llm.py  login.py  logs.py  mcp_instances.py  mcp_servers.py  messages.py  projects.py  proxy.py  sdlc.py  secrets.py  settings.py  streams.py  suggestions.py  teams.py  tool_calls.py  tool_definitions.py  tool_instances.py  users.py  utils.py
backend/app/api/routes/mcp/: servers.py  templates.py
backend/app/core/: config.py  db.py  logger.py  security.py
backend/app/core/models/: chat.py
backend/app/data/: __init__.py
backend/app/data/agents/: claude_coder.json
backend/app/data/mcp_templates/: __init__.py  aws.json  github.json  hubspot.json  playwright.json  upstash.json
backend/app/mcp/: __init__.py  manager.py  mcp_manager.py  mcp_server.py  proxy.py  queue_manager.py  server.py
backend/app/mcp/openapi/: executor.py  schema_to_func.py
backend/app/mcp/openapi/github/: tools.json
backend/app/mcp/openapi/misc/: tools.json
backend/app/models/: __init__.py  action.py  base.py  chat.py  connection.py  document.py  execute.py  item.py  mcp_instance.py  mcp_server.py  mcp_template.py  message.py  project.py  secret.py  setting.py  stream.py  suggestion.py  team.py  tool.py  tool_call.py  tool_definition.py  tool_defintion.py  tool_instance.py  user.py  utils.py  vote.py
backend/app/models/mcp/: __init__.py  base.py  server.py  template.py
backend/app/services/: api_search_service.py  sdlc_service.py  tool_registration.py  utils.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_actions.py  test_chats.py  test_connections.py  test_login.py  test_mcp_instances.py  test_mcp_servers.py  test_messages.py  test_projects.py  test_secrets.py  test_settings.py  test_suggestions.py  test_teams.py  test_tool_calls.py  test_tool_definitions.py  test_tool_instances.py  test_users.py
backend/app/tests/mcp/: conftest.py  test_executor.py  test_mcp_manager.py  test_mcp_server.py  test_schema_to_func.py
backend/app/tests/models/: test_tool_instance.py
backend/app/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/app/tests/services/: test_tool_registration.py
backend/app/tests/utils/: action.py  chat.py  connection.py  project.py  secret.py  setting.py  team.py  tool_call.py  user.py  utils.py
components/: answer.tsx  codeblock.tsx  conversation-actions.tsx  conversation.tsx  icons.tsx  prompt-form.tsx  question.tsx  references.tsx  search.tsx  settings-form.tsx  site-footer.tsx  site-header.tsx  suggestions.tsx
components/ui/: ai-model-selection.tsx  ai-provider-selection.tsx  autosize-textarea.tsx  toast.tsx  use-toast.tsx
dockerfiles/development/: docker-compose.postgres.yml  docker-compose.sqlite.yml
dockerfiles/production/: docker-compose.override.yml  docker-compose.yml
docs/: next.config.mjs  package.json  pnpm-lock.yaml  vercel.json  wrangler.toml
docs/app/: layout.config.tsx  (+1 more)
frontend/: .eslintrc.json  .gitignore  Dockerfile  auth.config.ts  auth.ts  global-setup.ts  global-teardown.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend-old/: .eslintrc.json  package.json  pnpm-lock.yaml
frontend_bak/: .gitignore  Dockerfile  auth.config.ts  playwright.config.ts  pnpm-lock.yaml
lib/: searchParser.ts
openastra/: utils.py
tests/: test_logger.py
(+428 files in other folders)
